Update Task PUT api with joi validation and swagger doc
